--- a/index.html
+++ b/index.html
@@ -41,6 +41,60 @@
     </div>
   </section>
 
+  <section id="destinations" class="destinations">
+    <h2>Popular Destinations</h2>
+    <div class="destination-grid">
+      <div class="destination-card">
+        <img src="https://via.placeholder.com/300" alt="Paris, France">
+        <h3>Paris, France</h3>
+        <p>Experience the city of love and lights.</p>
+      </div>
+      <div class="destination-card">
+        <img src="https://via.placeholder.com/300" alt="Tokyo, Japan">
+        <h3>Tokyo, Japan</h3>
+        <p>Discover the blend of tradition and modernity.</p>
+      </div>
+      <div class="destination-card">
+        <img src="https://via.placeholder.com/300" alt="New York, USA">
+        <h3>New York, USA</h3>
+        <p>Explore the city that never sleeps.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="services" class="services">
+    <h2>Our Services</h2>
+    <div class="service-grid">
+      <div class="service-card">
+        <h3>Guided Tours</h3>
+        <p>Expert guides to show you the best spots.</p>
+      </div>
+      <div class="service-card">
+        <h3>Custom Packages</h3>
+        <p>Tailored trips to suit your preferences.</p>
+      </div>
+      <div class="service-card">
+        <h3>24/7 Support</h3>
+        <p>We're here for you anytime, anywhere.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="about" class="about">
+    <h2>About Us</h2>
+    <p>We are a leading tourism company dedicated to providing unforgettable travel experiences. Our team of experts ensures that every trip is seamless and memorable.</p>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <form id="contactForm">
+      <input type="text" id="name" placeholder="Your Name" required>
+      <input type="email" id="email" placeholder="Your Email" required>
+      <textarea id="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
   <footer>
     <p>&copy; 2023 ExploreWorld. All rights reserved.</p>
   </footer>
