--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       <h1>ExploreWorld</h1>
     </div>
     <nav>
+      <!-- Hamburger Menu Icon -->
       <div class="menu-icon" id="menuIcon">
         <span></span>
         <span></span>
         <span></span>
       </div>
+      <!-- Navigation Links -->
       <ul class="nav-links" id="navLinks">
         <li><a href="#home">Home</a></li>
         <li><a href="#destinations">Destinations</a></li>
